added handling of cart-items in fe, minor tweaks in service

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,18 +27,20 @@
       <div class="panel panel-default">
         <div class="panel-heading">User Login</div>
         <div class="panel-body">
-          <div class="col-md-2">
-            <input type="text" class="form-control"
-              ng-model="username" 
-              placeholder="username" />
-          </div>
-          <div class="col-md-2">
-            <input type="password" class="form-control"
-              ng-model="password" 
-              placeholder="password" />
-          </div>
-          <div class="col-md-2">
-            <button type="button" class="btn btn-primary" ng-click="login()">Sign In!</button>
+          <div class="row">
+            <div class="col-md-2">
+              <input type="text" class="form-control"
+                ng-model="username" 
+                placeholder="username" />
+            </div>
+            <div class="col-md-2">
+              <input type="password" class="form-control"
+                ng-model="password" 
+                placeholder="password" />
+            </div>
+            <div class="col-md-2">
+              <button type="button" class="btn btn-primary" ng-click="login()">Sign In!</button>
+            </div>
           </div>
         </div>
       </div>
@@ -117,12 +119,17 @@
         </div>
       </div>
       <div class="col-md-6">
-        <div class="panel panel-default" ng-show="shoppingCart">
+        <div class="panel panel-default" ng-show="articles">
           <div class="panel-heading">
             Shopping Cart
           </div>
           <div class="panel-body">
-            <div class="container">
+            <div class="container" ng-hide="shoppingCart">
+              <button type="button"
+                    class="btn btn-warning btn-xs"
+                    ng-click="createShoppingCart()">start shopping!</button>
+            </div>
+            <div class="container" ng-show="shoppingCart">
                 <div class="row">
                   <div class="col-md-3">Articles: </div>
                   <div class="col-md-9">{{shoppingCart.articles.length}}</div>
@@ -139,12 +146,12 @@
                   <div class="col-md-3">Overall: </div>
                   <div class="col-md-9">{{shoppingCart.overallPrice}}</div>
                 </div>
-              </div>
+            </div>
           </div>
           <div class="panel-footer">
             <button type="button"
                     class="btn btn-warning btn-xs"
-                    ng-click="buyArticles()">buy now!</button>
+                    ng-click="buyArticles()" ng-show="shoppingCart">buy now!</button>
           </div>
         </div>
       </div>
